globalcss to be fixed for the dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,7 @@ body {
   }
 
   .dark {
-    --background: 224 71.4% 4.1%;
+    --background: 224 71.4% 5.1%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
     --card-foreground: 210 20% 98%;
@@ -53,7 +53,7 @@ body {
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 20% 98%;
     --border: 215 27.9% 16.9%;
-    --input: 215 27.9% 16.9%;
+    --input: 224 71.4% 5.1%;
     --ring: 263.4 70% 50.4%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
